--- a/index.html
+++ b/index.html
@@ -5,30 +5,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kalau Audiovisuales</title>
-    <script src="index.js"></script>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap" rel="stylesheet">
 </head>
 
-<body class="text-light bg-dark ">
+<body class="text-light bg-dark">
+    <!-- Navbar -->
     <nav class="navbar bg-black fixed-top">
         <div class="container-fluid d-flex justify-content-around">
-            <a class="navbar-brand " href="#">
+            <a class="navbar-brand" href="#">
                 <img src="/aro.png" alt="Logo" width="80" class="d-inline-block align-text-top">
             </a>
         </div>
     </nav>
-    
+
+    <!-- Fondo de video -->
     <div class="vh-100">
         <div class="video-container">
-            <video autoplay loop muted playsinline>
+            <video autoplay loop muted playsinline class="video-main">
                 <source src="kalaufx30.mp4" type="video/mp4">
             </video>
         </div>
@@ -36,12 +37,35 @@
             <h1 class="text-center font-italic">Más que un video...</h1>
         </div>
     </div>
-    
 
-    <div class="container my-5">
-        <h2 class="font-regular text-center ">Nuestros Proyectos</h2>
+    <!-- Contenido de la página -->
+    <div class=" my-5">
+        <h2 class="font-regular text-center">Nuestros Proyectos</h2>
+        <div id="videos" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 justify-content-center g-3">
+            <!-- Los videos se agregarán aquí dinámicamente con JS -->
+        </div>
     </div>
-    <div id="videos" class=""></div>
+
+    <!-- Modal con video nativo -->
+    <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content bg-transparent text-white">
+                <div class="modal-header d-flex flex-column">
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                    <h5 class="modal-title" id="videoModalLabel"></h5> <!--MODAL TITLE-->
+                    <h6 id="h6Desc" class="mt-3"></h6> <!--MODAL DESCRIPTION-->
+                </div>
+                <div class="modal-body text-center">
+                    <video id="modalVideo" width="100%" controls>
+                        <source src="" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Script al final del body -->
+    <script src="index.js"></script>
 </body>
 
 </html>
